--- a/Assets/style.uss
+++ b/Assets/style.uss
@@ -1,3 +1,12 @@
 #button-next:hover {
-    background-color: rgba(0, 25, 128, 255);
+    background-color: rgba(43, 43, 43, 255);
+    color: rgba(255, 235, 0, 255);
+}
+
+#button-next {
+}
+
+Button {
+    min-width: 100px;
+    min-height: 50px;
 }
