--- a/Assets/ui.uxml
+++ b/Assets/ui.uxml
@@ -1,6 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="style.uss" />
-    <ui:VisualElement name="root" style="flex-grow: 1;">
-        <ui:Button text="next wave" display-tooltip-when-elided="true" name="button-next" style="position: absolute; top: 474px; left: 510px; background-color: rgba(132, 4, 4, 255);" />
+    <ui:VisualElement name="root" style="flex-grow: 1; align-items: stretch; justify-content: center;">
+        <ui:VisualElement name="overlay" style="background-color: rgba(43, 51, 34, 0.84); flex-grow: 1; justify-content: center; align-items: center;">
+            <ui:Button text="next wave" display-tooltip-when-elided="true" name="button-next" />
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
