--- a/Assets/style.uss
+++ b/Assets/style.uss
@@ -1,12 +1,41 @@
-#button-next:hover {
-    background-color: rgba(43, 43, 43, 255);
-    color: rgba(255, 235, 0, 255);
+.NextButton {
+    position: relative;
+    top: 200px;
+    background-color: rgb(99, 231, 0);
+    -unity-background-image-tint-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    -unity-text-outline-color: rgba(255, 255, 255, 0);
+    text-shadow: 0.5px 0.5px -15px rgba(0, 0, 0, 0.21);
+    -unity-text-outline-width: 0;
+    border-left-color: rgba(255, 255, 255, 0);
+    border-right-color: rgba(255, 255, 255, 0);
+    border-top-color: rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(255, 255, 255, 0);
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    width: 100px;
+    height: 50px;
 }
 
-#button-next {
+.NextButton:hover {
+    background-color: rgb(120, 250, 0);
 }
 
-Button {
-    min-width: 100px;
-    min-height: 50px;
+.Card {
+    flex-grow: 1;
+    width: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+    max-width: 30%;
+    white-space: normal;
+    flex-shrink: 0;
 }
