--- a/Assets/style.uss
+++ b/Assets/style.uss
@@ -1,6 +1,4 @@
 .NextButton {
-    position: relative;
-    top: 200px;
     background-color: rgb(99, 231, 0);
     -unity-background-image-tint-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
@@ -21,6 +19,7 @@
     border-bottom-right-radius: 5px;
     width: 100px;
     height: 50px;
+    position: relative;
 }
 
 .NextButton:hover {
@@ -38,4 +37,33 @@
     max-width: 30%;
     white-space: normal;
     flex-shrink: 0;
+}
+
+.overlay {
+    background-color: rgba(255, 255, 255, 0.4);
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.weaponIcon {
+    width: 100%;
+    height: 100%;
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-left-color: rgba(245, 0, 0, 255);
+    border-right-color: rgba(245, 0, 0, 255);
+    border-top-color: rgba(245, 0, 0, 255);
+    border-bottom-color: rgba(245, 0, 0, 255);
+}
+
+.weaponUpgradeScreen {
+    flex-grow: 1;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
