--- a/Assets/ui.uxml
+++ b/Assets/ui.uxml
@@ -9,30 +9,35 @@
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="UpgradeScreen" class="overlay" style="flex-grow: 1; -unity-background-image-tint-color: rgb(56, 56, 56); display: flex;">
-            <ui:VisualElement name="UpgradeScreenContainer" style="flex-direction: row; width: 100%; padding-left: 50px; padding-right: 50px; padding-top: 50px; padding-bottom: 50px; height: 90%;">
-                <ui:VisualElement name="WeaponIconContainer" style="width: 100px; height: 100%;">
-                    <ui:VisualElement name="WeaponIcon0" class="weaponIcon" />
-                    <ui:VisualElement name="WeaponIcon1" class="weaponIcon" />
-                    <ui:VisualElement name="WeaponIcon2" class="weaponIcon" />
-                    <ui:VisualElement name="WeaponIcon3" class="weaponIcon" />
+            <ui:VisualElement name="UpgradeContainer" style="width: 100%; height: 90%;">
+                <ui:VisualElement name="UpgradeScreenContainer" style="flex-direction: row; width: 100%; padding-left: 50px; padding-right: 50px; padding-top: 50px; padding-bottom: 50px; height: 90%;">
+                    <ui:VisualElement name="WeaponIconContainer" style="width: 100px; height: 100%;">
+                        <ui:VisualElement name="WeaponIcon0" class="weaponIcon" />
+                        <ui:VisualElement name="WeaponIcon1" class="weaponIcon" />
+                        <ui:VisualElement name="WeaponIcon2" class="weaponIcon" />
+                        <ui:VisualElement name="WeaponIcon3" class="weaponIcon" />
+                    </ui:VisualElement>
+                    <ui:VisualElement name="UpgradeSelectorContainer" style="border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; width: 100%; height: auto; margin-left: 0; padding-left: 0; border-left-color: rgb(17, 255, 0); border-right-color: rgb(17, 255, 0); border-top-color: rgb(17, 255, 0); border-bottom-color: rgb(17, 255, 0); padding-right: 0; padding-top: 0; padding-bottom: 0; align-items: center; justify-content: center;">
+                        <ui:VisualElement name="WeaponUpgradeScreen0" class="weaponUpgradeScreen">
+                            <ui:Label text="Basic Gun" display-tooltip-when-elided="true" name="WeaponName" />
+                            <ui:VisualElement name="WeaponUpgradeCards" style="width: 80%; height: 80%;" />
+                        </ui:VisualElement>
+                        <ui:VisualElement name="WeaponUpgradeScreen1" class="weaponUpgradeScreen" style="display: none;">
+                            <ui:Label text="Pulse Gun" display-tooltip-when-elided="true" name="WeaponName" />
+                            <ui:VisualElement name="WeaponUpgradeCards" style="width: 80%; height: 80%;" />
+                        </ui:VisualElement>
+                        <ui:VisualElement name="WeaponUpgradeScreen2" class="weaponUpgradeScreen" style="display: none;">
+                            <ui:Label text="Bouncing Gun" display-tooltip-when-elided="true" name="WeaponName" />
+                            <ui:VisualElement name="WeaponUpgradeCards" style="width: 80%; height: 80%;" />
+                        </ui:VisualElement>
+                        <ui:VisualElement name="WeaponUpgradeScreen3" class="weaponUpgradeScreen" style="display: none;">
+                            <ui:Label text="Stun Gun" display-tooltip-when-elided="true" name="WeaponName" />
+                            <ui:VisualElement name="WeaponUpgradeCards" style="width: 80%; height: 80%;" />
+                        </ui:VisualElement>
+                    </ui:VisualElement>
                 </ui:VisualElement>
-                <ui:VisualElement name="UpgradeSelectorContainer" style="border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; width: 100%; height: auto; margin-left: 0; padding-left: 0; border-left-color: rgb(17, 255, 0); border-right-color: rgb(17, 255, 0); border-top-color: rgb(17, 255, 0); border-bottom-color: rgb(17, 255, 0); padding-right: 0; padding-top: 0; padding-bottom: 0; align-items: center; justify-content: center;">
-                    <ui:VisualElement name="WeaponUpgradeScreen0" class="weaponUpgradeScreen">
-                        <ui:Label text="Basic Gun" display-tooltip-when-elided="true" name="WeaponName" />
-                        <ui:VisualElement name="WeaponUpgradeCards" style="width: 80%; height: 80%;" />
-                    </ui:VisualElement>
-                    <ui:VisualElement name="WeaponUpgradeScreen1" class="weaponUpgradeScreen" style="display: none;">
-                        <ui:Label text="Pulse Gun" display-tooltip-when-elided="true" name="WeaponName" />
-                        <ui:VisualElement name="WeaponUpgradeCards" style="width: 80%; height: 80%;" />
-                    </ui:VisualElement>
-                    <ui:VisualElement name="WeaponUpgradeScreen2" class="weaponUpgradeScreen" style="display: none;">
-                        <ui:Label text="Bouncing Gun" display-tooltip-when-elided="true" name="WeaponName" />
-                        <ui:VisualElement name="WeaponUpgradeCards" style="width: 80%; height: 80%;" />
-                    </ui:VisualElement>
-                    <ui:VisualElement name="WeaponUpgradeScreen3" class="weaponUpgradeScreen" style="display: none;">
-                        <ui:Label text="Stun Gun" display-tooltip-when-elided="true" name="WeaponName" />
-                        <ui:VisualElement name="WeaponUpgradeCards" style="width: 80%; height: 80%;" />
-                    </ui:VisualElement>
+                <ui:VisualElement name="CardInventoryContainer" style="width: 100%; height: 20%; padding-left: 50px; padding-right: 50px; padding-top: 0; padding-bottom: 20px;">
+                    <ui:VisualElement name="DragTest" style="background-color: rgba(19, 31, 190, 255); width: 100px; height: 100px;" />
                 </ui:VisualElement>
             </ui:VisualElement>
             <ui:Button text="next wave" display-tooltip-when-elided="true" name="button-next" class="NextButton" />
